[metadata]
name = chk
version = 0.3.2
author = Mahmudul Hasan
author_email = hasanlock@gmail.com
description = Test management for API era.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chkware.github.io
project_urls =
    Bug Tracker = https://github.com/chkware/cli/issues
    GitHub = https://github.com/chkware/cli
    Twitter = https://twitter.com/chkware
    Documentation = https://chkware.github.io

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: System :: Networking
    Topic :: Terminals
    Topic :: Text Processing
    Topic :: Utilities

[options]
package_dir =
    chk=chk
packages = find_namespace:
python_requires = >=3.10

install_requires =
    astroid==2.9.3
    cerberus==1.3.4
    certifi==2021.10.8
    charset-normalizer==2.0.12
    click==8.0.4
    dotmap==1.3.26
    idna==3.3
    isort==5.10.1
    lazy-object-proxy==1.7.1
    mccabe==0.6.1
    platformdirs==2.4.1
    pyyaml==6.0
    requests-toolbelt==0.9.1
    requests==2.27.1
    setuptools==60.10.0; python_version >= '3.7'
    toml==0.10.2
    typing-extensions==4.0.1
    urllib3==1.26.9
    wrapt==1.13.3

[options.packages.find]
where =

exclude=
    tests
    tests.*

[options.entry_points]
console_scripts =
    chk=chk.console.main:execute_root