[metadata]
name = chk
version = 0.4.3
author = Mahmudul Hasan
author_email = hasanlock@gmail.com
description = Low-code API quality testing, and automation toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chkware.github.io
project_urls =
    Bug Tracker = https://github.com/chkware/cli/issues
    GitHub = https://github.com/chkware/cli
    Twitter = https://twitter.com/chkware
    Documentation = https://chkware.github.io
    Ask a question = https://stackoverflow.com/questions/tagged/chkware-cli

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: System :: Networking
    Topic :: Terminals
    Topic :: Text Processing
    Topic :: Utilities

[options]
package_dir =
    chk=chk
packages = find_namespace:
python_requires = >=3.11

install_requires =
    cerberus==1.3.4
    certifi==2023.7.22 ; python_version >= '3.6'
    charset-normalizer==3.0.1 ; python_full_version >= '3.6.0'
    click==8.1.3
    idna==3.4 ; python_version >= '3.5'
    pyyaml==6.0
    requests==2.28.2
    setuptools==67.1.0 ; python_version >= '3.7'
    urllib3==1.26.14 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'

[options.packages.find]
where =

exclude=
    tests
    tests.*
    docs
    docs.*

[options.entry_points]
console_scripts =
    chk=chk.console.main:execute_root